// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CLI pipe in, pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI pipe in (schema without ID), pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI pipe in (schema without title or ID), pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface NoName {
  foo?: string;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (untitled schema, digits-only file name), pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface NoName {
  foo?: string;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (no flags), pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (--input), pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (-i), pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (-i), unreachable definitions flag, pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface DefinitionsOnly {
  [k: string]: unknown;
}
/**
 * This interface was referenced by \`DefinitionsOnly\`'s JSON-Schema
 * via the \`definition\` "DummyPerson".
 */
export interface DummyPerson {
  age?: number;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (-i), style flags, pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Enum {
  fstype?: 'ext3' | 'ext4' | 'btrfs'
  [k: string]: unknown
}
"
`;

exports[`CLI file in (-i), pipe out (absolute path) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (yaml), pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI pipe in, file out (--output) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI pipe in, file out (-o) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (no flags), file out (no flags) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (-i), file out (-o) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in (--input), file out (--output) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI file in, file out (-o) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`CLI --unknownAny 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: any[];
  likesDogs?: boolean;
  [k: string]: any;
}
"
`;

exports[`CLI --additionalProperties 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
}
"
`;

exports[`CLI files in (-i), files out (-o) 1`] = `"./test/resources/MultiSchema/out/a.d.ts"`;

exports[`CLI files in (-i), files out (-o) 2`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ASchema {
  f: string;
  g?: number;
}
"
`;

exports[`CLI files in (-i), files out (-o) 3`] = `"./test/resources/MultiSchema/out/b.d.ts"`;

exports[`CLI files in (-i), files out (-o) 4`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface BSchema {
  x?: string;
  y: number;
  [k: string]: unknown;
}
"
`;

exports[`CLI files in (-i), pipe out 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ASchema {
  f: string;
  g?: number;
}
/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface BSchema {
  x?: string;
  y: number;
  [k: string]: unknown;
}
"
`;

exports[`CLI files in (-i), files out (-o) nested dir does not exist 1`] = `"./test/resources/MultiSchema/foo/bar/out/a.d.ts"`;

exports[`CLI files in (-i), files out (-o) nested dir does not exist 2`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ASchema {
  f: string;
  g?: number;
}
"
`;

exports[`CLI files in (-i), files out (-o) nested dir does not exist 3`] = `"./test/resources/MultiSchema/foo/bar/out/b.d.ts"`;

exports[`CLI files in (-i), files out (-o) nested dir does not exist 4`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface BSchema {
  x?: string;
  y: number;
  [k: string]: unknown;
}
"
`;

exports[`CLI files in (-i), $ref resolves relative to referring file, not process.cwd() (#324) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Referencing {
  inner?: Referenced;
  [k: string]: unknown;
}
export interface Referenced {
  id: string;
  [k: string]: unknown;
}
"
`;

exports[`CLI files in (-i), files out (-o) matching nested dir 1`] = `"test/resources/MultiSchema2/out/bar/b.d.ts"`;

exports[`CLI files in (-i), files out (-o) matching nested dir 2`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface BSchema {
  x?: string;
  y: number;
  [k: string]: unknown;
}
"
`;

exports[`CLI files in (-i), files out (-o) matching nested dir 3`] = `"test/resources/MultiSchema2/out/bar/SameDirName/MultiSchema2/e.d.ts"`;

exports[`CLI files in (-i), files out (-o) matching nested dir 4`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export type ESchema = string;
"
`;

exports[`CLI files in (-i), files out (-o) matching nested dir 5`] = `"test/resources/MultiSchema2/out/foo/a.d.ts"`;

exports[`CLI files in (-i), files out (-o) matching nested dir 6`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface ASchema {
  f: string;
  g?: number;
}
"
`;

exports[`CLI files in (-i), files out (-o) matching nested dir 7`] = `"test/resources/MultiSchema2/out/foobar/c.d.ts"`;

exports[`CLI files in (-i), files out (-o) matching nested dir 8`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface CSchema {
  f: string;
  g?: number;
}
"
`;

exports[`CLI files in (-i), files out (-o) matching nested dir 9`] = `"test/resources/MultiSchema2/out/foobar/fuzz/d.d.ts"`;

exports[`CLI files in (-i), files out (-o) matching nested dir 10`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface DSchema {
  f: string;
  g?: number;
}
"
`;

exports[`CLI directory in, --imports: shared types are imported from the module that declares them 1`] = `"test/resources/Imports/out/a.d.ts"`;

exports[`CLI directory in, --imports: shared types are imported from the module that declares them 2`] = `
"import type {B} from "./b.js";
import type {Thing} from "./common.js";

export interface A {
  thing?: Thing;
  partner?: B;
}
"
`;

exports[`CLI directory in, --imports: shared types are imported from the module that declares them 3`] = `"test/resources/Imports/out/b.d.ts"`;

exports[`CLI directory in, --imports: shared types are imported from the module that declares them 4`] = `
"import type {A} from "./a.js";
import type {Tag} from "./common.js";

export interface B {
  thing?: Thing;
  owner?: A;
}
/**
 * B's own note about its thing
 */
export interface Thing {
  id: string;
  tags?: Tag[];
}
"
`;

exports[`CLI directory in, --imports: shared types are imported from the module that declares them 5`] = `"test/resources/Imports/out/common.d.ts"`;

exports[`CLI directory in, --imports: shared types are imported from the module that declares them 6`] = `
"/**
 * This interface was referenced by \`Common\`'s JSON-Schema
 * via the \`definition\` "tag".
 */
export type Tag = "red" | "green";

/**
 * Shared definitions; no properties of its own
 */
export interface Common {}
/**
 * This interface was referenced by \`Common\`'s JSON-Schema
 * via the \`definition\` "thing".
 */
export interface Thing {
  id: string;
  tags?: Tag[];
}
"
`;

exports[`CLI --declarationStyle 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export type ExampleSchema = {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
};
"
`;
